2008-01-21  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGridView.cs: Just hide the grid textbox and do nothing more 
	 when the current object selection changes. 
	 Fixes failing test SelectedObject_Null2.B5.

2008-01-21  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGrid.cs: Process Browsable properties with 
	 DesignerSerializationVisibilityAttribute.Content as being expandable.
	 This seems also what MS does. Without this e.g SplitContainer.Panel1/2
	 will not be expandable. We should be nested components-friendly now.

2008-01-21  Andreia Gaita <avidigal@novell.com>

	* WebBrowserBase.cs: Check if control was loaded properly, 
	don't bind if it wasn't.

	* HtmlDocument.cs: Implement CreateElement, Equals, Focus, 
	GetElementFromPoint, equality operators, OpenNew, Write.
	Remove extra set_Body

2008-01-18  Jonathan Pobst  <monkey@jpobst.com>

	* ContainerControl.cs, Control.cs: Apply patch from James Purcell
	that makes our AutoScale* stuff more tolerant to different orders
	of being set.  [Fixes bug #354669]

2008-01-18  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGridView.cs, PropertyGridTextBox.cs: 
	 Drop WM_LBUTTONDOWN msg sending and use focusing instead.
	 [Fixes #339005 and #348209]

2008-01-18  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGridView.cs: Hide the grid text box before adjusting it
	 for the newly selected GridItem.
	 [Fixes #338999]

2008-01-18  Jonathan Pobst  <monkey@jpobst.com>

	* Form.cs: Give MDI children the opportunity to cancel the parent form
	attempting to close.  Ensure that all [Form]Clos[ing,ed] events get called
	properly for both the parent and child.
	* Application.cs: Signature of internal method changed, pass the previous
	default of false.
	[Fixes bug #354286]

2008-01-17  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs: Set the property value only if it has changed.
	[Fixes bug #338997]

2008-01-17  Jonathan Pobst  <monkey@jpobst.com>
