@@ -373,6 +373,17 @@ namespace System.Windows.Forms {
 			
 			return rect;
 		}
+		
+		public static Graphics GraphicsContext {
+			get {
+				if (bmp_g == null) {
+					bmp = new Bitmap (1, 1, System.Drawing.Imaging.PixelFormat.Format32bppArgb);
+					bmp_g = Graphics.FromImage (bmp);
+				}
+			
+				return bmp_g;
+			}
+		}
 		#endregion	// Static Methods
 
 		#region Instance Properties
